--- a/_assets/stylesheets/post.scss
+++ b/_assets/stylesheets/post.scss
@@ -6,7 +6,7 @@
 }
 
 .page-subtitle {
-  color: $body-text-color;
+  color: $site-text-color;
   font-weight: 400;
   line-height: 1.5;
   font-size: 1.7rem;
@@ -14,6 +14,12 @@
   text-align: center;
   opacity: 0.6;
   width: 42rem;
+}
+
+.article-cover {
+  img {
+    box-shadow: 0 19px 38px rgba(0,0,0,0.1), 0 15px 12px rgba(0,0,0,0.12);
+  }
 }
 
 .story-content {
@@ -34,14 +40,31 @@
   &.columns:not(:last-child) {
     margin-bottom: 0;
   }
-  picture{
-    padding: 7.5px 5px;
+  &.columns {
+    margin: 0;
+    line-height: 0;
+  }
+  clear: both;
+  picture {
+    overflow: hidden;
+    &.column {
+      padding: 0;
+      img {
+        padding: 5px;
+      }
+    }
   }
 }
 
 
 .is-fullheight {
+  &.columns {
+    margin: 0;
+  }
   .column {
-    padding: 4.5px;
+    padding: 0;
+    img {
+      padding: 5px;
+    }
   }
 }
