--- a/_assets/stylesheets/themes/_dark.scss
+++ b/_assets/stylesheets/themes/_dark.scss
@@ -1,2 +1,5 @@
-$body-background-color: #253642;
-$body-text-color: #fff;
+$site-background-color: #292f33;
+$site-text-color: #fff;
+
+$site-footer-background-color: rgba(0, 0, 0, 0.3);
+$site-footer-border-color: rgba(0, 0, 0, 0.5);
