--- a/_assets/stylesheets/themes/_light.scss
+++ b/_assets/stylesheets/themes/_light.scss
@@ -1,2 +1,5 @@
-$body-background-color: #fff;
-$body-text-color: #232323;
+$site-background-color: #fff;
+$site-text-color: #232323;
+
+$site-footer-background-color: rgba(0, 0, 0, 0.02);
+$site-footer-border-color: rgba(0, 0, 0, 0.1);
