Adding the index page

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -29,7 +29,7 @@
     <meta property="og:site_name" content="{{ site.inc.title }}">
 </head>
     <body>
-        <div class="page">
+        <div class="site">
             {% include _header.html %}
             {{ content }}
             {% include _footer.html %}
