--- a/_assets/stylesheets/page.scss
+++ b/_assets/stylesheets/page.scss
@@ -29,3 +29,47 @@ body {
   margin-top: 4rem;
   border-top: solid 1px $site-footer-border-color;
 }
+
+.posts-list {
+  margin-top: 6rem;
+
+  .card {
+    position: relative;
+    overflow: hidden;
+
+    img {
+      width: 100%;
+      max-width: 100%;
+      line-height: 0;
+      height: auto;
+      transition: all 4s ease-out;
+    }
+
+    .card-image {
+      background-repeat: no-repeat;
+      background-position: center center;
+    }
+
+    &:hover {
+      overflow: hidden;
+      img {
+        transform: scale(1.1);
+        border-radius: 3px;
+      }
+    }
+
+    .card-content {
+      position: absolute;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: linear-gradient(to bottom, rgba(33,36,37,0) 0%,rgba(33,36,37,0.7) 50%,rgba(33,36,37,0.84) 100%);
+      h2 {
+        color: #fff;
+        font-weight: bold;
+        font-size: 2.5rem;
+        line-height: 1.4;
+      }
+    }
+  }
+}
