--- a/_assets/stylesheets/post.scss
+++ b/_assets/stylesheets/post.scss
@@ -16,6 +16,11 @@
   width: 42rem;
 }
 
+img {
+  opacity: 0.5;
+  transition: opacity .3s ease-in;
+}
+
 .article-cover {
   img {
     box-shadow: 0 19px 38px rgba(0,0,0,0.1), 0 15px 12px rgba(0,0,0,0.12);
