--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,7 +19,7 @@ layout: base
         {% if page.cover_image %}
         <div class="article-cover">
             <div>
-                <img src="{{ page.cover_image }}" class="image">
+                <img src="images/loader.svg" data-src="{{ page.cover_image }}" class="image">
             </div>
         </div>
         {% endif %}
