--- a/_includes/_header.html
+++ b/_includes/_header.html
@@ -57,24 +57,18 @@
             </span>
 
             <div class="nav-right nav-menu">
-                <a class="nav-item" href="#">
-                Home
-                </a>
-                <a class="nav-item" href="#">
-                Documentation
-                </a>
-                <a class="nav-item" href="#">
+                <a class="nav-item is-tab" href="http://blog.websiddu.com">
                 Blog
                 </a>
-
-                <span class="nav-item">
-                <a class="button" >
-                    <span class="icon">
-                    <i class="fa fa-twitter"></i>
-                    </span>
-                <span>Tweet</span>
+                <a class="nav-item is-tab" href="http://websiddu.com">
+                Portfolio
                 </a>
-                </span>
+                <a class="nav-item is-tab" href="http://about.websiddu.com">
+                About
+                </a>
+                <a class="nav-item is-tab" href="http://cook.websiddu.com">
+                Cook
+                </a>
             </div>
         </nav>
     </header>
