--- a/_assets/stylesheets/bulma/components/nav.sass
+++ b/_assets/stylesheets/bulma/components/nav.sass
@@ -34,6 +34,9 @@ $nav-height: 50px !default
 .nav-item a,
 a.nav-item
   color: $text-light
+  font-size: 0.9rem
+  font-weight: 500
+  text-transform: uppercase
   &:hover
     color: $link-hover
   // Modifiers
@@ -42,8 +45,8 @@ a.nav-item
   &.is-tab
     border-bottom: 1px solid transparent
     border-top: 1px solid transparent
-    padding-left: 12px
-    padding-right: 12px
+    padding-left: 16px
+    padding-right: 16px
     &:hover
       border-bottom: 1px solid $link
       border-top: 1px solid transparent
