--- a/_assets/stylesheets/bulma/utilities/variables.sass
+++ b/_assets/stylesheets/bulma/utilities/variables.sass
@@ -26,7 +26,7 @@ $purple:       hsl(271, 100%, 71%) !default
 $red:          hsl(348, 100%, 61%) !default
 
 // Typography
-$family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif !default
+$family-sans-serif: "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif !default
 $family-monospace: "Inconsolata", "Consolas", "Monaco", monospace !default
 
 $size-1: 48px !default
@@ -54,7 +54,7 @@ $speed: 86ms !default
 ////////////////////////////////////////////////
 // 2. Primary colors
 
-$primary: $turquoise !default
+$primary: #4A89DC !default
 
 $info: $blue !default
 $success: $green !default
