--- a/_assets/stylesheets/post.scss
+++ b/_assets/stylesheets/post.scss
@@ -1,3 +1,5 @@
+$site-content-width: 42rem;
+
 .page-title {
   font-size: 6rem;
   font-weight: bold;
@@ -13,7 +15,7 @@
   margin: 0 auto 4.5rem;
   text-align: center;
   opacity: 0.6;
-  width: 42rem;
+  width: $site-content-width;
 }
 
 img {
@@ -29,8 +31,29 @@ img {
 
 .story-content {
   overflow: hidden;
-  width: 42rem;
-  margin: 4rem auto 4rem;
+  width: $site-content-width;
+  margin: 4.5rem auto 2rem;
+
+  &.location {
+    i.locaiton-icon {
+      float: left;
+      display: block;
+      line-height: 1.4;
+      font-size: 2.2rem;
+      margin-right: 1.2rem;
+      color: #888;
+    }
+  }
+
+  h2 {
+    font-size: 2.3rem;
+    font-weight: 400;
+    margin-bottom: 1.4rem;
+  }
+
+  i.locaiton-icon {
+    display: none;
+  }
 
   p {
     font-size: 1.25rem;
@@ -40,6 +63,7 @@ img {
     margin-bottom: 1rem;
   }
 }
+
 
 .photo-set {
   &.columns:not(:last-child) {
