--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -1,5 +1,34 @@
 <footer class="site-footer">
     <div class="container">
-        &copy; {{ site.time | date: "%Y" }}
+        <div class="level">
+            <div class="level-left">
+                <div class="level-item">
+                    <p style="width: 80%;">
+                        Hey, My name is Siddhartha Gudipati, I'm a Designer at Google living in the bayarea. I enjoy cooking, photography, coding &amp; more... follow me <a href="http://twitter.com/websiddu" target="_blank">@websiddu</a>.
+                    </p>
+                </div>
+            </div>
+            <div class="level-right">
+                <div class="level-item">
+                    <div class="nav-right nav-menu">
+                        <a class="nav-item" href="http://blog.websiddu.com">
+                        Blog
+                        </a>
+                        <a class="nav-item" href="http://portfolio.websiddu.com">
+                        Portfolio
+                        </a>
+                        <a class="nav-item" href="http://about.websiddu.com">
+                        About
+                        </a>
+                        <a class="nav-item" href="http://cook.websiddu.com">
+                        Cook
+                        </a>
+                        <a class="nav-item" href="http://dribbble.com/websiddu">
+                        Dribbble
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </footer>
