Adding other images

--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -3,8 +3,8 @@
         <div class="level">
             <div class="level-left">
                 <div class="level-item">
-                    <p style="width: 80%;">
-                        Hey, My name is Siddhartha Gudipati, I'm a Designer at Google living in the bayarea. I enjoy cooking, photography, coding &amp; more... follow me <a href="http://twitter.com/websiddu" target="_blank">@websiddu</a>.
+                    <p style="width: 50%;">
+                        Hey, my name is Siddhartha Gudipati, I'm a Designer at Google living in the bayarea. I enjoy cooking, photography, coding &amp; more... follow me <a href="http://twitter.com/websiddu" target="_blank">@websiddu</a>.
                     </p>
                 </div>
             </div>
