--- a/_assets/stylesheets/post.scss
+++ b/_assets/stylesheets/post.scss
@@ -15,7 +15,7 @@ $site-content-width: 42rem;
   margin: 0 auto 4.5rem;
   text-align: center;
   opacity: 0.6;
-  width: $site-content-width;
+  max-width: $site-content-width;
 }
 
 img {
@@ -31,7 +31,7 @@ img {
 
 .story-content {
   overflow: hidden;
-  width: $site-content-width;
+  max-width: $site-content-width;
   margin: 4.5rem auto 2rem;
 
   &.location {
