--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -3,7 +3,7 @@
         <div class="level">
             <div class="level-left">
                 <div class="level-item">
-                    <p style="width: 50%;">
+                    <p style="is-7">
                         Hey, my name is Siddhartha Gudipati, I'm a Designer at Google living in the bayarea. I enjoy cooking, photography, coding &amp; more... follow me <a href="http://twitter.com/websiddu" target="_blank">@websiddu</a>.
                     </p>
                 </div>
