--- a/_assets/stylesheets/page.scss
+++ b/_assets/stylesheets/page.scss
@@ -62,7 +62,7 @@ body {
       max-width: 100%;
       line-height: 0;
       height: auto;
-      transition: transform 4s ease-out,
+      transition: transform 5s ease-out,
         opacity 0.4s ease-in;
     }
 
@@ -75,11 +75,16 @@ body {
       overflow: hidden;
       img {
         transform: scale(1.1);
-        border-radius: 3px;
+      }
+      .card-content {
+        opacity: 0;
+        transform: scale(1.3);
+        transition: all .05s ease-in-out;
       }
     }
 
     .card-content {
+      transition: all .25s ease-in-out;
       position: absolute;
       left: 0;
       right: 0;
