--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -1,14 +1,15 @@
 <footer class="site-footer">
     <div class="container">
-        <div class="level">
-            <div class="level-left">
+        <div class="columns">
+            <div class="column is-5">
                 <div class="level-item">
-                    <p style="is-7">
+                    <p style="">
                         Hey, my name is Siddhartha Gudipati, I'm a Designer at Google living in the bayarea. I enjoy cooking, photography, coding &amp; more... follow me <a href="http://twitter.com/websiddu" target="_blank">@websiddu</a>.
                     </p>
                 </div>
             </div>
-            <div class="level-right">
+            <div class="column is-3"></div>
+            <div class="column is-4">
                 <div class="level-item">
                     <div class="nav-right nav-menu">
                         <a class="nav-item" href="http://blog.websiddu.com">
