--- a/_assets/stylesheets/bulma/base/generic.scss
+++ b/_assets/stylesheets/bulma/base/generic.scss
@@ -1,7 +1,6 @@
-$body-background: $white-ter !default;
+$body-background: $white !default;
 
 html {
-  background-color: $body-background;
   font-size: $size-normal;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
