--- a/_assets/stylesheets/bulma/utilities/variables.scss
+++ b/_assets/stylesheets/bulma/utilities/variables.scss
@@ -39,7 +39,7 @@ $size-6: 14px !default;
 $size-7: 11px !default;
 
 $weight-normal: 400 !default;
-$weight-bold: 700 !default;
+$weight-bold: 500 !default;
 $weight-title-normal: 300 !default;
 $weight-title-bold: 500 !default;
 
@@ -126,6 +126,6 @@ $size-huge: $size-1 !default;
 ////////////////////////////////////////////////
 // 4. Lists and maps
 
-$colors: (white: ($white, $black), black: ($black, $white), light: ($light, $light-invert), dark: ($dark, $dark-invert), primary: ($primary, $primary-invert), info: ($info, $info-invert), success: ($success, $success-invert), warning: ($warning, $warning-invert), danger: ($danger, $danger-invert)) !default;
+$colors: ("white": ($white, $black), "black": ($black, $white), "light": ($light, $light-invert), "dark": ($dark, $dark-invert), "primary": ($primary, $primary-invert), "info": ($info, $info-invert), success: ($success, $success-invert), warning: ($warning, $warning-invert), danger: ($danger, $danger-invert)) !default;
 
 $sizes: $size-1 $size-2 $size-3 $size-4 $size-5 $size-6 !default;
