--- a/_assets/stylesheets/pages/_index.scss
+++ b/_assets/stylesheets/pages/_index.scss
@@ -9,26 +9,6 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-.nav-item.is-brand img {
-  max-height: 32px;
-}
-
-.is-direction {
-  margin-left: -10px;
-}
-
-.is-sub-brand {
-  margin-left: -10px;
-}
-
-.site-nav {
-  .nav {
-    padding: 0 1rem;
-    box-shadow: 0 0 1px rgba(0, 0, 0, 0.3);
-  }
-}
-
-
 .page {
   line-height: 1.65;
   min-height: 500px;
@@ -40,22 +20,14 @@ body {
   margin: 0 auto 0;
 }
 
-
-.site-footer {
-  min-height: 120px;
-  background: $site-footer-background-color;
-  margin-top: 4rem;
-  border-top: solid 1px $site-footer-border-color;
-  padding: 2rem 0;
-}
-
 .posts-list {
-  margin-top: 4rem;
+  margin-top: 3vh;
 
   .card {
     position: relative;
     overflow: hidden;
     background: #43434B;
+    max-height: 400px;
 
     img {
       width: 100%;
