Adding the required header and footer

--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -4,7 +4,7 @@
             <div class="column is-5">
                 <div class="level-item">
                     <p style="">
-                        Hey, my name is Siddhartha Gudipati, I'm a Designer at Google living in the bayarea. I enjoy cooking, photography, coding &amp; more... follow me <a href="http://twitter.com/websiddu" target="_blank">@websiddu</a>.
+                        Hey 👋🏽, my name is Siddhartha, I'm a Designer at Google living in the bayarea. I enjoy cooking, photography, coding &amp; more. Follow me <a href="http://twitter.com/websiddu" target="_blank">@websiddu</a>.
                     </p>
                 </div>
             </div>
@@ -12,21 +12,7 @@
             <div class="column is-4">
                 <div class="level-item">
                     <div class="nav-right nav-menu">
-                        <a class="nav-item" href="http://blog.websiddu.com">
-                        Blog
-                        </a>
-                        <a class="nav-item" href="http://portfolio.websiddu.com">
-                        Portfolio
-                        </a>
-                        <a class="nav-item" href="http://about.websiddu.com">
-                        About
-                        </a>
-                        <a class="nav-item" href="http://cook.websiddu.com">
-                        Cook
-                        </a>
-                        <a class="nav-item" href="http://dribbble.com/websiddu">
-                        Dribbble
-                        </a>
+                        {% include _nav.html %}
                     </div>
                 </div>
             </div>
