--- a/_assets/stylesheets/bulma/utilities/variables.scss
+++ b/_assets/stylesheets/bulma/utilities/variables.scss
@@ -26,7 +26,7 @@ $purple: hsl(271, 100%, 71%) !default;
 $red: hsl(348, 100%, 61%) !default;
 
 // Typography
-$family-sans-serif: "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif !default;
+$family-sans-serif: "Puritan", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif !default;
 $family-monospace: "Inconsolata", "Consolas", "Monaco", monospace !default;
 
 $size-1: 48px !default;
