Adding the LA trip post

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -31,6 +31,7 @@
 </head>
     <body>
         <div class="site">
+            <a href="#0" class="cd-top">Top ↑</a>
             {% include _header.html %}
             {{ content }}
             {% include _footer.html %}
