--- a/_assets/stylesheets/themes/_light.scss
+++ b/_assets/stylesheets/themes/_light.scss
@@ -3,3 +3,5 @@ $site-text-color: #232323;
 
 $site-footer-background-color: rgba(0, 0, 0, 0.02);
 $site-footer-border-color: rgba(0, 0, 0, 0.1);
+
+$site-pagination-border-color: $site-footer-border-color;
