--- a/_assets/stylesheets/themes/_light.scss
+++ b/_assets/stylesheets/themes/_light.scss
@@ -5,3 +5,11 @@ $site-footer-background-color: rgba(0, 0, 0, 0.02);
 $site-footer-border-color: rgba(0, 0, 0, 0.1);
 
 $site-pagination-border-color: $site-footer-border-color;
+
+$site-nav-bg-color: $site-background-color;
+$site-nav-shadow: 0 0 1px rgba(0, 0, 0, 0.3);
+
+$site-nav-color: #7a7a7a;
+$site-nav-hover-color: #363636;;
+
+$site-pagination-bg-color: $site-footer-background-color;
