Changing the layout

--- a/_assets/stylesheets/bulma/elements/other.scss
+++ b/_assets/stylesheets/bulma/elements/other.scss
@@ -18,7 +18,8 @@
 
 
   @include widescreen {
-    max-width: 1200px;
+    // max-width: 1200px;
+    max-width: 90vw;
   }
 
   @include megascreen {
