--- a/_includes/_nav.html
+++ b/_includes/_nav.html
@@ -1,4 +1,4 @@
-<a class="nav-item {{include.istab}}" href="http://websiddu.com">
+<a class="nav-item {{include.istab}}" href="http://portfolio.websiddu.com">
     Portfolio
 </a>
 <a class="nav-item {{include.istab}}" href="http://blog.websiddu.com">
