--- a/_assets/stylesheets/pages/_index.scss
+++ b/_assets/stylesheets/pages/_index.scss
@@ -9,6 +9,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.container-full {
+  margin: 24px 0;
+}
+
 .page {
   line-height: 1.65;
   min-height: 500px;
@@ -23,19 +27,23 @@ body {
 .posts-list {
   margin-top: 3vh;
 
+  .square {
+    width: 25vw;
+    flex: none;
+  }
+
   .card {
     position: relative;
     overflow: hidden;
     background: #43434B;
-    max-height: 350px;
 
     img {
       width: 100%;
       max-width: 100%;
       line-height: 0;
       height: auto;
-      transition: transform 5s ease-out,
-        opacity 0.4s ease-in;
+      transition: transform 5s cubic-bezier(0.42, 0, 0.58, 1),
+        opacity 100ms cubic-bezier(0.42, 0, 0.58, 1);
     }
 
     .card-image {
@@ -45,28 +53,57 @@ body {
 
     &:hover {
       overflow: hidden;
+      background: rgba(0,0,0,0.5);
+
       img {
         transform: scale(1.1);
+        opacity: 0.8;
       }
-      .card-content {
-        opacity: 0;
-        transform: scale(1.3);
-        transition: all .05s ease-in-out;
+
+      &:before {
+        content: '';
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        background: rgba(0,0,0,0.5);
       }
+      // .card-content {
+      //   opacity: 0;
+      //   transform: scale(1.3);
+      //   transition: all .05s ease-in-out;
+      // }
     }
 
     .card-content {
-      transition: all .25s ease-in-out;
+      transition: all 100ms cubic-bezier(0.42, 0, 0.58, 1);
       position: absolute;
       left: 0;
       right: 0;
       bottom: 0;
-      background: linear-gradient(to bottom, rgba(33,36,37,0) 0%,rgba(33,36,37,0.7) 50%,rgba(33,36,37,0.84) 100%);
+      background: linear-gradient(to bottom,  rgba(255,255,255,0) 0%, transparent 1%, rgba(0,0,0,0.05) 26%, rgba(0,0,0,0.5) 71%, rgba(0,0,0,0.7) 100%);
+      padding: 30% 20px 5% 20px;
+
       h2 {
         color: #fff;
         font-weight: bold;
-        font-size: 2.5rem;
+        font-size: 21px;
+        text-transform: uppercase;
         line-height: 1.4;
+        margin: 0;
+        margin-bottom: 4px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
+
+      p {
+        color: #fff;
+        font-size: 15px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
       }
     }
   }
