Adding the light box

--- a/_assets/stylesheets/pages/_index.scss
+++ b/_assets/stylesheets/pages/_index.scss
@@ -117,7 +117,7 @@ body {
   bottom: 100px;
   right: 10px;
   z-index: 10;
-  color: #43434B;
+  color: #fff;
   transition: opacity .3s 0s, visibility 0s .3s;
   visibility: hidden;
   text-align: center;
