--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -44,7 +44,7 @@ layout: base
                             <a href="{{ page.previous.previous.url }}">
                             <div class="card">
                                 <div class="card-image">
-                                <figure class="image is-4by3">
+                                <figure class="image">
                                     <img src="http://res.cloudinary.com/websiddu/image/upload/w_800,h_800,c_fill/photos/{{page.previous.previous.cover_image}}.jpg" alt="{{post.title}}">
                                 </figure>
                                 </div>
@@ -60,7 +60,7 @@ layout: base
                         <a href="{{ page.previous.url }}">
                         <div class="card">
                             <div class="card-image">
-                            <figure class="image is-4by3">
+                            <figure class="image">
                                 <img src="http://res.cloudinary.com/websiddu/image/upload/w_800,h_800,c_fill/photos/{{page.previous.cover_image}}.jpg" alt="{{post.title}}">
                             </figure>
                             </div>
@@ -76,7 +76,7 @@ layout: base
                         <a href="{{ page.next.url }}">
                         <div class="card">
                             <div class="card-image">
-                            <figure class="image is-4by3">
+                            <figure class="image">
                                 <img src="http://res.cloudinary.com/websiddu/image/upload/w_800,h_800,c_fill/photos/{{page.next.cover_image}}.jpg" alt="{{post.title}}">
                             </figure>
                             </div>
@@ -92,7 +92,7 @@ layout: base
                             <a href="{{ page.next.next.url }}">
                             <div class="card">
                                 <div class="card-image">
-                                <figure class="image is-4by3">
+                                <figure class="image">
                                     <img src="http://res.cloudinary.com/websiddu/image/upload/w_800,h_800,c_fill/photos/{{page.next.next.cover_image}}.jpg" alt="{{post.title}}">
                                 </figure>
                                 </div>
